# LMS-alternative

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  virtual.txt
services/: auth_service.py  drive_service.py
src/: main.py
src/backend/: auth_service.py  file_preview_service.py  notification_service.py
src/services/: auth_service.py  drive_service.py
src/ui/: dashboard.py  firebase_mobile_login.py  login.py  todo_view.py
src/ui/custom_control/: gmail_profile_menu.py  multi_account_manager.py
src/ui/dashboard_modules/: file_manager.py  folder_navigator.py
src/ui/todo_modules/: data_manager.py  notification_settings.py  student_manager.py  submission_manager.py
src/utils/: common.py
ui/: dashboard.py  login.py
ui/custom_control/: custom_controls.py
ui/todo_modules/: submission_manager.py
